--- a/persistent/db/Dockerfile
+++ b/persistent/db/Dockerfile
@@ -1,11 +1,11 @@
 FROM postgres:18-trixie
 
 LABEL maintainer="PostGIS Project - https://postgis.net" \
-    org.opencontainers.image.description="PostGIS 3.6.0+dfsg-3.pgdg13+1 spatial database extension with PostgreSQL 18 trixie" \
+    org.opencontainers.image.description="PostGIS 3.6.1+dfsg-1.pgdg13+1 spatial database extension with PostgreSQL 18 trixie" \
     org.opencontainers.image.source="https://github.com/postgis/docker-postgis"
 
 ENV POSTGIS_MAJOR=3
-ENV POSTGIS_VERSION=3.6.0+dfsg-3.pgdg13+1
+ENV POSTGIS_VERSION=3.6.1+dfsg-1.pgdg13+1
 
 RUN apt-get update \
     && apt-cache showpkg postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR \
@@ -14,9 +14,10 @@ RUN apt-get update \
     #   fix: https://github.com/postgis/docker-postgis/issues/307
     ca-certificates \
     \
-    postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR=$POSTGIS_VERSION \
+    postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR \
     postgresql-$PG_MAJOR-postgis-$POSTGIS_MAJOR-scripts \
     && rm -rf /var/lib/apt/lists/*
+
 
 RUN mkdir -p /docker-entrypoint-initdb.d
 COPY ./persistent/db/initdb-postgis.sh /docker-entrypoint-initdb.d/10_postgis.sh
