--- a/persistent/nginx/templates/https-443.conf.template
+++ b/persistent/nginx/templates/https-443.conf.template
@@ -25,6 +25,17 @@ server {
     #******************************************************
     #       MediaMTX
     #******************************************************
+    # Proxy WebRTC requests to MediaMTX
+    location ~ ^/webrtc(/?)(.*)$ {
+            proxy_pass http://${MTX_ADDRESS}:8889/$2$is_args$args;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_redirect off;
+            include includes.d/proxy_params;
+
+    }
+
     # Proxy HLS requests to MediaMTX
     location ~ ^/hls(/?)(.*)$ {
         include includes.d/proxy_params;
