--- a/persistent/nginx/templates/https-8443.conf.template
+++ b/persistent/nginx/templates/https-8443.conf.template
@@ -28,4 +28,12 @@ server {
         proxy_http_version 1.1;
         proxy_pass http://${OTS_ADDRESS};
     }
+
+    location /api {
+        proxy_pass http://${OTS_ADDRESS};
+        proxy_http_version 1.1;
+        proxy_set_header Host $host:8443;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
